updated handlebars files

--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -1,5 +1,4 @@
-         <!--Start Of Navbar-->
-    <nav class="navbar navbar-default">
+<nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Toggle For Mobile Display -->
             <div class="navbar-header">
@@ -16,6 +15,7 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+<!--End Of Nav-->
         <div class="row logoArea">
             <div class="top container">
                 <div class="col-lg12 col-md-12 col-sm-12">
@@ -152,15 +152,10 @@
 
 </script>
 
- 
- <!--Sign Up Modal-->
-
 <div class="popup" data-popup="popup-1">
     <div class="popup-inner">
-
     <div class="wrapper">
     <form class="form-signin create-update-form" action="/quests/charcreate" method="POST"> <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Sign Up <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
-
     <hr>
     <p>Enter Your E-mail</p>
     <!--Email-->
@@ -168,7 +163,6 @@
     <!--Password-->
     <p class="modalSpace">Enter Your Password</p>
     <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
-
     <!--UserName-->
     <p class="modalSpace">Please enter your user name</p>
     <input type="text" class="form-control" name="name" placeholder="Username" required="" id="nameInput">
@@ -177,22 +171,17 @@
     <input type="text" class="form-control" name="photo" placeholder="Ex: http://..jpg" required="" id="picUrl">
     <br>
     <button class="btn btn-lg btn-default clearBtn center-block" type="submit">Submit</button> 
-
     <!-- <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-1" type="submit">Get Started</button> -->
-
     </form>
-
 </div>
-
         <!--Inside Close-->
         <p class="text-center space"><a data-popup-close="popup-1" href="#">Close</a></p>
         <!--Outside Close-->
         <a class="popup-close" data-popup-close="popup-1" href="#">x</a>
         <!--END-->
-
-
     </div>
 </div>
+
 
 <!--Forgot Password Modal-->
 
