--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -259,6 +259,13 @@ h6 {
 .modalSpace {
 
   padding-top: 10px;
+  text-align: left;
+}
+
+.firstModal {
+
+  padding-top: 0px;
+  text-align: left;
 }
 
 /* Outer */
@@ -331,4 +338,25 @@ h6 {
     box-shadow:0px 2px 6px rgba(0,0,0,1);
     border-radius:3px;
     background:#fff;
+}
+
+.popup-inner-3 {
+    max-width:425px;
+    max-height:485px;
+    width:90%;
+    padding:20px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    -webkit-transform:translate(-50%, -50%);
+    transform:translate(-50%, -50%);
+    box-shadow:0px 2px 6px rgba(0,0,0,1);
+    border-radius:3px;
+    background:#fff;
+}
+
+.characterArea {
+
+  margin-top: 10px;
+
 }
