--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,41 +1,93 @@
-<div class="row">
-    <div class="col-md-2">
-    <form class="create-update-form" action="quests/create" method="POST">
-        <h4><b>Quest</b></h4>
-        <input type="text" id="questInput" name="task">
-    </div>
-    <div class="col-md-2">
-        <h4><b>Challenge Level</b></h4>
-                <select class="form-control" id="levelSelect" name="rating">
-                    <option value="5">Common +5</option>
-                    <option value="10">Tough +10</option>
-                    <option value="20">Epic +20</option>
-            </select>
-    </div>
-    <div class="col-md-2">
-        <h4><b>Type</b></h4>
-                <select class="form-control" id="typeSelect" name="qtype">
-                    <option value="intellect">Intellect</option>
-                    <option value="body">Body</option>
-                    <option value="soul">Soul</option>
-                </select>
-    </div>
-    <div class="col-md-2">
-        <br>
-        <br>
-        
-        <input type="hidden" value="{{playerID}}" name="playerID">
-        <button id="submitBtn" class="btn btn-primary">Add Quest</button>
-    </div>
+<nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Toggle For Mobile Display -->
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/"><img alt="logo" height="34" src="/assets/img/logo2.png" width="92"></a>
+            </div>
+            <!-- Login and Signup Area -->
+            <form class="navbar-form pull-right create-update-form" action="/quests/login" method="POST"">
+                <input class="span2" placeholder="Email" type="text" name="email" required="">
+                <input class="span2" placeholder="Password" type="password" name="password" required="">
+                <button class="btn loginBtn btn-sm" type="submit" href="/quests/charcreate">Login</button>
+                <br>
+                <a class="navSection" data-popup-open="popup-1" href="#">Sign Up</a><a class="navSection" data-popup-open="popup-2" href="#">Forgot Password?</a>
+            </form>
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+<!--End Of Nav-->
+
+<div class="popup" data-popup="popup-1">
+    <div class="popup-inner">
+    <div class="wrapper">
+    <form class="form-signin create-update-form" action="/quests/charcreate" method="POST"> <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Sign Up <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
+    <hr>
+    <p>Enter Your E-mail</p>
+    <!--Email-->
+    <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
+    <!--Password-->
+    <p class="modalSpace">Enter Your Password</p>
+    <input type="password" class="form-control" name="password" placeholder="Password" required=""/> 
+    <!--UserName-->
+    <p class="modalSpace">Please enter your user name</p>
+    <input type="text" class="form-control" name="name" placeholder="Username" required="" id="nameInput">
+    <!--Link For Photo-->
+    <p class="modalSpace">Link to your photo</p>
+    <input type="text" class="form-control" name="photo" placeholder="Ex: http://..jpg" required="" id="picUrl">
+    <br>
+    <button class="btn btn-lg btn-default clearBtn center-block" type="submit">Submit</button> 
+    <!-- <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-1" type="submit">Get Started</button> -->
     </form>
 </div>
-<div class="row">
+        <!--Inside Close-->
+        <p class="text-center space"><a data-popup-close="popup-1" href="#">Close</a></p>
+        <!--Outside Close-->
+        <a class="popup-close" data-popup-close="popup-1" href="#">x</a>
+        <!--END-->
+    </div>
+</div>
+
+
+<!--Forgot Password Modal-->
+
+<div class="popup" data-popup="popup-2">
+    <div class="popup-inner-2">
+
+    <div class="wrapper">
+    <form class="form-signin"> <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Forgot PW <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
+
+    <hr>
+    <p>Enter Your E-mail To Retrieve Your Password</p>
+    <!--Email-->
+    <input type="text" class="form-control" name="email" placeholder="Email Address" required="" autofocus="" />
+    <!--Password-->
+    <br>
+    <button class="btn btn-lg btn-default clearBtn center-block" type="submit">Submit</button> 
+
+    <!-- <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-1" type="submit">Get Started</button> -->
+
+    </form>
+
+</div>
+
+        <!--Inside Close-->
+        <p class="text-center space"><a data-popup-close="popup-2" href="#">Close</a></p>
+
+        <!--Outside Close-->
+        <a class="popup-close" data-popup-close="popup-2" href="#">x</a>
+
+
+    </div>
+</div>
+<!--Character Area-->
+<div class="container characterArea">
+  <div class="row">
     <div class="col-md-4" id="profile">
-        <br>
         <h3>Character Profile</h3>
         <br>
-        <img id="profImg" src="http://www.colorcombos.com/images/colors/FFFFFF.png" width="100" height="135">
-        {{#each quests}}
+    <img id="profImg" src="http://www.colorcombos.com/images/colors/FFFFFF.png" width="120" height="135">
+
+    {{#each quests}}
             {{#if @last}}
         <h4 type="hidden" id="photoVal">{{this.photo}}</h4> 
         <h4><b>Name: {{this.name}}</b></h4>
@@ -46,7 +98,72 @@
         <h5><b>Experience: {{this.exp}}</b></h5>
             {{/if}}
         {{/each}}
+
     </div>
+    <div class="col-md-4 text-center" id="info">
+        
+        <!--Add Task Modal-->
+
+        <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-3" type="submit">Add Quest</button>
+
+        <!--Add Task Modal-->
+
+<div class="popup" data-popup="popup-3">
+    <div class="popup-inner-3">
+    <div class="wrapper">
+    <form class="create-update-form" action="quests/create" method="POST">
+     <h2 class="form-signin-heading center"><i class="glyphicon glyphicon-equalizer"></i> Add Quest <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
+
+    <hr>
+    <p class="firstModal">Enter Your Quest</p>
+    <!--Email-->
+
+    <input type="text" class="form-control" name="task" placeholder="Enter Quest" required="" autofocus=""/>
+    <!--Challenge Level-->
+    <p class="modalSpace">Challenge Level</p>
+                <select class="form-control" id="levelSelect" name="rating">
+                    <option value="5">Common +5</option>
+                    <option value="10">Tough +10</option>
+                    <option value="20">Epic +20</option>
+                </select>
+
+    <p class="modalSpace">Type</p>
+                <select class="form-control" id="typeSelect" name="qtype">
+                    <option value="intellect">Intellect</option>
+                    <option value="body">Body</option>
+                    <option value="soul">Soul</option>
+                </select>
+
+    <br>
+    <br>
+
+    <input type="hidden" value="{{playerID}}" name="playerID">
+    <button class="btn btn-lg btn-default clearBtn center-block" type="submit">Add Quest</button> 
+
+    <!-- <button class="btn btn-lg btn-default clearBtn" data-popup-open="popup-1" type="submit">Get Started</button> -->
+
+    </form>
+
+</div>
+
+        <!--Inside Close-->
+        <p class="text-center space"><a data-popup-close="popup-3" href="#">Close</a></p>
+        <!--Outside Close-->
+        <a class="popup-close" data-popup-close="popup-3" href="#">x</a>
+    </div>
+</div>
+
+    </div>
+    <div class="col-md-4">
+
+    </div>
+  </div>
+</div>
+
+<div class="row titleBanner center-block">
+        <h2><i class="glyphicon glyphicon-equalizer"></i> Quests <i class="glyphicon glyphicon-equalizer flipped"></i></h2>
+      </div>
+
 <div class="col-md-4" id="quests">
         <br>
         <h3>Active Quests</h3>
@@ -73,12 +190,14 @@
             {{/each}}
             </div>
 </div>
+
 <div class="col-md-4" id="doneQuests">
     <br>
     <h3>Completed Quests</h3>
         <br>
             {{#each quests}}
                 {{#if this.done}}
+                        
                         <h5><b>Complete: {{this.task}}</b></h5>
                         <h5>Rating: {{this.rating}}</h5>
                         <br>
@@ -86,7 +205,7 @@
                 {{/if}}
             {{/each}}
 </div>
-</div>
+
 <script type="text/javascript">
 $(document).ready(function(){
     var plyrPhoto = $('#photoVal').text();
