--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <div class="container">
             <!-- Toggle For Mobile Display -->
             <div class="navbar-header">
                 <a class="navbar-brand" href="/"><img alt="logo" height="34" src="/assets/img/logo2.png" width="92"></a>
