Added method for invalid logins and secure logout

--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -10,7 +10,7 @@
                 <input class="span2" placeholder="Password" type="password" name="password" required="">
                 <button class="btn loginBtn btn-sm" type="submit" href="/quests/charcreate">Login</button>
                 <br>
-                <a class="navSection" data-popup-open="popup-1" href="#">Sign Up</a><a class="navSection" data-popup-open="popup-2" href="#">Forgot Password?</a>
+                <a class="navSection" data-popup-open="popup-1" href="#">Sign Up</a>
             </form>
         </div>
         <!-- /.container-fluid -->
@@ -214,5 +214,7 @@
 
     </div>
 </div>
+
+
 
 
