--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -159,6 +159,21 @@ a{
 
 }
 
+.btn-link {
+  border:none;
+  outline:none;
+  background:none;
+  cursor:pointer;
+  color:#0000EE;
+  padding:0;
+  font-family:inherit;
+  font-size:inherit;
+}
+
+.btn-link:active {
+  color:#FF0000;
+}
+
 .navbar-default {
 
   margin-bottom: 0px;
